--- a/package.json
+++ b/package.json
@@ -1,74 +1,66 @@
 {
-  "name": "init_react",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node ./server/start.js",
-    "dev": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production",
-    "eslint": "node_modules/.bin/eslint . --ext .ts,.tsx,.js,.jsx",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/classnames": "2.2.11",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.0",
-    "@types/react-router-dom": "5.1.7",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "css-loader": "5.0.1",
-    "eslint": "7.19.0",
-    "eslint-config-airbnb-typescript": "12.3.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "file-loader": "6.2.0",
-    "html-webpack-plugin": "4.5.1",
-    "npm-run-all": "4.1.5",
-    "postcss": "8.2.4",
-    "postcss-color-mod-function": "3.0.3",
-    "postcss-loader": "5.0.0",
-    "postcss-nested": "5.0.3",
-    "postcss-preset-env": "6.7.0",
-    "postcss-simple-vars": "6.0.3",
-    "react-hook-form": "^6.15.1",
-    "style-loader": "2.0.0",
-    "stylelint": "13.9.0",
-    "stylelint-config-standard": "20.0.0",
-    "stylelint-webpack-plugin": "2.1.1",
-    "ts-loader": "8.0.15",
-    "typescript": "4.1.3",
-    "webpack": "5.21.0",
-    "webpack-cli": "4.5.0",
-    "prettier": "^2.2.1",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "webpack-dev-server": "3.11.2"
-  },
+  "name": "ts_react_portal",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "classnames": "2.2.6",
-    "express": "4.17.1",
+    "i18next": "19.9.1",
+    "moment": "2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0"
+    "react-i18next": "11.8.8",
+    "react-redux": "7.2.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.3",
+    "react-transition-group": "4.4.1",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "2.3.0"
   },
-  "husky_temp": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "eslint": "./node_modules/.bin/eslint . --ext .tsx,.ts"
   },
-  "lint-staged": {
-    "*.scss": [
-      "npx stylelint **/*.scss",
-      "git add"
-    ],
-    "*.ts": [
-      "node_modules/.bin/eslint . --ext .ts --max-warnings=0",
-      "prettier --write",
-      "git add"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "@types/classnames": "2.2.11",
+    "@types/jest": "26.0.15",
+    "@types/node": "12.0.0",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-redux": "7.1.16",
+    "@types/react-router-dom": "5.1.7",
+    "@types/react-transition-group": "4.4.1",
+    "@types/redux": "3.6.0",
+    "@types/redux-thunk": "2.1.0",
+    "eslint-config-airbnb-typescript": "12.3.1",
+    "stylelint": "13.11.0",
+    "stylelint-config-standard": "20.0.0",
+    "typescript": "4.1.2",
+    "web-vitals": "1.0.1"
   }
 }
