--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,26 @@
 {
-    "compilerOptions": {
-        "lib": [
-            "dom",
-            "es2017"
-        ],
-        "module": "esnext",
-        "moduleResolution": "node",
-        "target": "es5",
-        "jsx": "react",
-        "importHelpers": true,
-        "noUnusedLocals": true,
-        "esModuleInterop": true,
-        "strict": true,
-        "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true,
-        "skipLibCheck": true,
-        "declaration": false,
-        "sourceMap": false,
-        "rootDir": "./",
-        "outDir": "./dist",
-        "baseUrl": "./",
-        "paths": {
-            "src/*": ["./src/*"],
-        }
-    },
-    "include": ["./src", "./server"]
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "include": [
+    "src"
+  ]
 }
